netwerk/protocol/http/EarlyHintPreloader.cpp
@@ -209,8 +209,7 @@ void EarlyHintPreloader::MaybeCreateAndInsertPreload(
   ASDestination destination = static_cast<ASDestination>(as.GetEnumValue());
   CollectResourcesTypeTelemetry(destination);
 
-  if (!StaticPrefs::network_early_hints_enabled() ||
-      !StaticPrefs::network_preload()) {
+  if (!StaticPrefs::network_early_hints_enabled()) {
     return;
   }
 
