testing/web-platform/tests/tools/wptrunner/wptrunner/browsers/firefox.py
@@ -663,7 +663,6 @@ class ProfileCreator:
             # TODO: Remove preferences once Firefox 64 is stable (Bug 905404)
             "network.proxy.type": 0,
             "places.history.enabled": False,
-            "network.preload": True,
         })
         if self.e10s:
             profile.set_preferences({"browser.tabs.remote.autostart": True})
